--- a/src/app/posts/[uid]/index.module.css
+++ b/src/app/posts/[uid]/index.module.css
@@ -36,6 +36,6 @@
   line-height: normal;
   letter-spacing: normal;
   color: #000;
+  margin: 34px 0px;
   margin-left: 24px;
-  margin-top: 34px;
 }
